src/styles/contact.sass
@import 'app.sass'
$contactSmlWidth: 40vh
$contactMedWidth: 50vh
$contactLrgWidth: 85vh
input, textarea
    @include myriad()
    color: #333
    box-sizing: border-box
    letter-spacing: 5px
    border: 0
    padding: 7px
    border-bottom: 1px solid #ccc
    @include respond-to('xsmall')
    

.submitBtn
    padding: 5px
input, textarea, .submitBtn
    @include respond-to('small')
        width: $contactSmlWidth
    @include respond-to('medium')
        width: $contactMedWidth
    @include respond-to('large')
        width: $contactLrgWidth
iframe
    @include respond-to('small')
        width: $contactSmlWidth
        height: $contactSmlWidth/1.5
    @include respond-to('medium')
        width: $contactMedWidth
        height: $contactSmlWidth
    @include respond-to('large')
        width: $contactLrgWidth
        height: $contactMedWidth/1.5
section
    p
        @include gothic()
        font-size: 5vh
        padding: 2vh 0vh 1vh 0vh
        @include respond-to('medium')
            font-size: 6vh
            letter-spacing: .2vh
        @include respond-to('large')
            font-size: 7vh
            letter-spacing: .9vh

